src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Score_Last_time_on_DBA_Q_Score__c</fullName>
        <formula>IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_Last_time_on_DBA_Q__c )*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on DBA Q&apos; Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_DBA_Q__c</fullName>
        <label>Last time on DBA Questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_INC_Q__c</fullName>
        <label>Last time on INC Questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_INC_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_Last_time_on_INC_Q__c)*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on INC Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_LLC_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_last_time_on_LLC_Q__c)*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on LLC Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_NP_Q__c</fullName>
        <label>Last time on NP Questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Last_time_on_NP_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=10,6, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=30,5, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=60,4, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=240,3, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=1440,2, 
IF((NOW()- Lead_Score_Last_time_on_NP_Q__c )*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on NP Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Mobile_time_since_creation__c</fullName>
        <formula>IF( AND((ISPICKVAL( LeadSource , &apos;Mobile&apos;) || (ISPICKVAL( LeadSource , &apos;Facebook&apos;))), NOT(ISBLANK(Last_Time_Added_to_Campaign__c ))),  
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=1440,2048, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=240,1024, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=60,512, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=30,256, 
IF((NOW()- Last_Time_Added_to_Campaign__c )*24*60&gt;=10,128,64))))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile time since creation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Non_Time_Sensitive__c</fullName>
        <label>Non Time Sensitive Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_Questionnaire_score__c</fullName>
        <formula>If( Value(Lead_Score_Time_on_this_Questionnaire__c) &gt; 30,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time on Questionnaire score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_this_Questionnaire__c</fullName>
        <label>Time on this Questionnaire</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_website__c</fullName>
        <inlineHelpText>No of minutes</inlineHelpText>
        <label>Time  on website</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Time_on_website_score__c</fullName>
        <formula>IF(VALUE(Lead_Score_Time_on_website__c) /30 &lt;1,0,
         IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=1 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;2,1,
                  IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=2 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;3,2,
                           IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=3 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;4,3,
                                    IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=4 &amp;&amp; VALUE(Lead_Score_Time_on_website__c) /30 &lt;5,4,
                                             IF(VALUE(Lead_Score_Time_on_website__c) /30 &gt;=5,5,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time on website Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>Lead_Score2__c+ If(( Lead_score_time_sensitive_bucket_percent__c != 0  &amp;&amp;  Lead_score_time_sensitive_bucket_total__c != 0 ),
(((( Lead_Score_Last_time_on_DBA_Q_Score__c +  Lead_Score_Last_time_on_INC_Q_score__c + Lead_Score_Last_time_on_LLC_Q_score__c + Lead_Score_Last_time_on_NP_Q_score__c + Lead_score_last_time_on_website_score__c+Lead_Score_last_called_in_time_score__c+Lead_Score_last_emailed_in_time_score__c)/ Lead_score_time_sensitive_bucket_total__c )* Lead_score_time_sensitive_bucket_percent__c ) + Lead_Score_Non_Time_Sensitive__c - Mobile_negitive_Score__c + Lead_Score_Mobile_time_since_creation__c +Created_Today_Score__c),Lead_Score_Non_Time_Sensitive__c + Lead_Score_Mobile_time_since_creation__c+Created_Today_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score x</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_called_in_time__c</fullName>
        <label>Last called in time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_called_in_time_score__c</fullName>
        <formula>iF(TODAY()-DATEVALUE(Lead_Score_last_called_in_time__c)&lt;=2,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last called in time score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_emailed_in_time_score__c</fullName>
        <formula>IF(TODAY()- DATEVALUE( Lead_score_last_emailed_in_time__c )&lt;=7,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last emailed in time score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score_last_time_on_LLC_Q__c</fullName>
        <label>Last time on LLC questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Shown_on_Flow__c</fullName>
        <formula>TEXT(Product__c) &amp; &quot; Lead&quot; &amp; &quot; (&quot;&amp; 
if (ISBLANK(Product_Line_Text__c), TEXT(Product_Line__c), Product_Line_Text__c)
&amp; &quot;)&quot;&amp;BR() &amp; 
&quot;-----Status: &quot; &amp; TEXT(Status) &amp; BR() &amp; 
&quot;-----Created: &quot;  &amp;  Date_Time_Created_Adjusted__c  &amp; BR() &amp; 
&quot;-----Updated: &quot;  &amp;  Date_Time_Last_Modified_Adjusted__c  &amp; BR() &amp; 
&quot;-----Assigned: &quot; &amp;  Custom_Owner__r.FirstName &amp; &quot; &quot; &amp; Custom_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Shown on Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Sam&apos;s Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Sources__c</fullName>
        <label>Lead Sources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_emailed_in_time__c</fullName>
        <label>Last emailed in time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_Q_score__c</fullName>
        <formula>IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=10,6,
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=30,5,
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=60,4,
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=240,3,
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=1440,2,
IF((NOW()- Lead_score_last_time_on_questionnaire__c)*24*60&lt;=4320,1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on Q&apos; score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_questionnaire__c</fullName>
        <label>Last time on Questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_website__c</fullName>
        <label>Last time on wesite</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_score_last_time_on_website_score__c</fullName>
        <formula>IF(TODAY()- DATEVALUE(Lead_score_last_time_on_website__c)&lt;=7,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time on website score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_score_time_sensitive_bucket_percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time sensitive bucket percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_score_time_sensitive_bucket_total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time sensitive bucket total</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Matter__c</fullName>
        <label>Legal Matter</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Interested_In__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Review Your LegalZoom Last Will</fullName>
                </value>
                <value>
                    <fullName>Review Your LegalZoom Living Will</fullName>
                </value>
                <value>
                    <fullName>Review Your LegalZoom Power of Attorney</fullName>
                </value>
                <value>
                    <fullName>Questions about Your Living Trust</fullName>
                </value>
                <value>
                    <fullName>Is a Last Will or Living Trust Right for Me?</fullName>
                </value>
                <value>
                    <fullName>Business Start-up</fullName>
                </value>
                <value>
                    <fullName>Wills, Trusts and Estate Planning</fullName>
                </value>
                <value>
                    <fullName>Review a Document -- up to 10 pages</fullName>
                </value>
                <value>
                    <fullName>Annual Legal Checkup</fullName>
                </value>
                <value>
                    <fullName>General Legal Questions</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy and Financial Distress</fullName>
                </value>
                <value>
                    <fullName>Child Custody and Child Support</fullName>
                </value>
                <value>
                    <fullName>Contracts and Legal Agreements</fullName>
                </value>
                <value>
                    <fullName>Criminal Defense</fullName>
                </value>
                <value>
                    <fullName>Employment and Termination</fullName>
                </value>
                <value>
                    <fullName>Landlord/Tenant</fullName>
                </value>
                <value>
                    <fullName>Marriage and Divorce</fullName>
                </value>
                <value>
                    <fullName>Personal Injury and Property Damage</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Business Formation and Management</fullName>
                </value>
                <value>
                    <fullName>Corporate Ownership and Shares</fullName>
                </value>
                <value>
                    <fullName>Collections or Debt Issues</fullName>
                </value>
                <value>
                    <fullName>Copyright or Trademark Issues</fullName>
                </value>
                <value>
                    <fullName>Employment Issues</fullName>
                </value>
                <value>
                    <fullName>Insurance and Liability</fullName>
                </value>
                <value>
                    <fullName>Landlord/Tenant and Property Issues</fullName>
                </value>
                <value>
                    <fullName>Lawsuits or Fraud</fullName>
                </value>
                <value>
                    <fullName>Regulatory Issues and Business Licenses</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Ins__c</fullName>
        <label>Life Ins-Accuquote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <label>Marketing Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Channel__c</fullName>
        <label>Marketing Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <label>Marketing Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Medium__c</fullName>
        <label>Mktg Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Val2__c</fullName>
        <label>Mktg Val2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Lead__c</fullName>
        <formula>If(RecordTypeId=&apos;012G0000000qHQR&apos; || RecordTypeId=&apos;012G0000000qHQQ&apos;,&apos;yes&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Lead?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_negitive_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mobile negitive Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_or_Facebook__c</fullName>
        <formula>ISPICKVAL( LeadSource  , &apos;Mobile&apos;) ||  ISPICKVAL( LeadSource  , &apos;Facebook&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile or Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Account_End_Time__c</fullName>
        <label>My Account Latest Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>My_Account_Start_Time__c</fullName>
        <label>My Account Initial Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>My_Account_Time_Spent__c</fullName>
        <formula>(My_Account_End_Time__c - My_Account_Start_Time__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>In Days</inlineHelpText>
        <label>My Account Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Needs_Audit_Hidden_Field_2__c</fullName>
        <label>Needs Audit Hidden Field 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked (true) when a Needs Audit has been completed for this Lead.</description>
        <label>Needs Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Me_When_Documents_are_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Me When Documents are Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Artist</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Computer Programmer</fullName>
                </value>
                <value>
                    <fullName>Counselor</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Educator/Teacher</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Entrepreneur</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Medical Technician</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Paralegal/Legal Assistant</fullName>
                </value>
                <value>
                    <fullName>Salesperson</fullName>
                </value>
                <value>
                    <fullName>Scientist</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Writer/Editor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Lead</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Date__c</fullName>
        <label>Ownership Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Package_Interested_In__c</fullName>
        <label>Package Interested In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employment Agreement</fullName>
                </value>
                <value>
                    <fullName>Exclusive Sales Representative Agreement</fullName>
                </value>
                <value>
                    <fullName>Independent Contractor Agreement</fullName>
                </value>
                <value>
                    <fullName>Independent Contractor Unilateral NDA</fullName>
                </value>
                <value>
                    <fullName>Employee IP/Non-Disclosure Agreement</fullName>
                </value>
                <value>
                    <fullName>Not Sure / Something Else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BIZ Mobile CTC</fullName>
                </value>
                <value>
                    <fullName>IP Mobile CTC</fullName>
                </value>
                <value>
                    <fullName>PSD Mobile CTC</fullName>
                </value>
                <value>
                    <fullName>Bank of America Transfer</fullName>
                </value>
                <value>
                    <fullName>License 123 Transfer</fullName>
                </value>
                <value>
                    <fullName>AMEX Transfer</fullName>
                </value>
                <value>
                    <fullName>LegalZoom</fullName>
                </value>
                <value>
                    <fullName>LegalZoom Local Transfer</fullName>
                </value>
                <value>
                    <fullName>Sam&apos;s Club</fullName>
                </value>
                <value>
                    <fullName>RA Outbound</fullName>
                </value>
                <value>
                    <fullName>INC Call Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Early Evening</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Business_Activity__c</fullName>
        <label>Primary Business Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accommodations</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food Service</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Renting and Leasing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>Wholesale/Agent/Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>LAP</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>501c3</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>B&amp;R</fullName>
                </value>
                <value>
                    <fullName>COGS</fullName>
                </value>
                <value>
                    <fullName>Cert Copy</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Conv</fullName>
                </value>
                <value>
                    <fullName>Diss</fullName>
                </value>
                <value>
                    <fullName>MMM</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>ENC</fullName>
                </value>
                <value>
                    <fullName>ENR</fullName>
                </value>
                <value>
                    <fullName>FQ</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>S-Corp Elec</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>STID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line2__c</fullName>
        <formula>IF(INCLUDES(Product2__c, &quot;CR&quot;), &quot;Intellectual Property&quot;,
  IF(INCLUDES(Product2__c, &quot;Des Pat&quot;), &quot;Intellectual Property&quot;, 
   IF(INCLUDES(Product2__c, &quot;Pat Search&quot;), &quot;Intellectual Property&quot;, 
    IF(INCLUDES(Product2__c, &quot;Pat Draw&quot;), &quot;Intellectual Property&quot;, 
     IF(INCLUDES(Product2__c, &quot;Prov Pat&quot;), &quot;Intellectual Property&quot;, 
      IF(INCLUDES(Product2__c, &quot;TM&quot;), &quot;Intellectual Property&quot;, 
       IF(INCLUDES(Product2__c, &quot;TM Assign&quot;), &quot;Intellectual Property&quot;, 
        IF(INCLUDES(Product2__c, &quot;TM Monitor&quot;), &quot;Intellectual Property&quot;, 
         IF(INCLUDES(Product2__c, &quot;TM Search&quot;), &quot;Intellectual Property&quot;, 
          IF(INCLUDES(Product2__c, &quot;TM Dec (8)&quot;), &quot;Intellectual Property&quot;, 
           IF(INCLUDES(Product2__c, &quot;TM Renew (9)&quot;), &quot;Intellectual Property&quot;, 
            IF(INCLUDES(Product2__c, &quot;TM SOU&quot;), &quot;Intellectual Property&quot;, 
             IF(INCLUDES(Product2__c, &quot;TM SOU Ext&quot;), &quot;Intellectual Property&quot;, 
              IF(INCLUDES(Product2__c, &quot;PAT&quot;), &quot;Intellectual Property&quot;, 
               IF(INCLUDES(Product2__c, &quot;Bankruptcy&quot;), &quot;Personal Services&quot;, 
                IF(INCLUDES(Product2__c, &quot;Div&quot;), &quot;Personal Services&quot;, 
                 IF(INCLUDES(Product2__c, &quot;LWT&quot;), &quot;Personal Services&quot;, 
                  IF(INCLUDES(Product2__c, &quot;LT&quot;), &quot;Personal Services&quot;, 
                   IF(INCLUDES(Product2__c, &quot;LW&quot;), &quot;Personal Services&quot;, 
                    IF(INCLUDES(Product2__c, &quot;NC&quot;), &quot;Personal Services&quot;, 
                     IF(INCLUDES(Product2__c, &quot;Pet Protect&quot;), &quot;Personal Services&quot;, 
                      IF(INCLUDES(Product2__c, &quot;POA&quot;), &quot;Personal Services&quot;,
                       IF(INCLUDES(Product2__c, &quot;Prenuptial&quot;), &quot;Personal Services&quot;,
                        IF(INCLUDES(Product2__c, &quot;REDT&quot;), &quot;Personal Services&quot;,
                         IF(INCLUDES(Product2__c, &quot;REL&quot;), &quot;Personal Services&quot;,
                          IF(INCLUDES(Product2__c, &quot;DUI&quot;), &quot;Personal Services&quot;, &quot;Business Services&quot; ))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
</CustomObject>